# codex-router

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/codex-router-auth/: Cargo.toml
crates/codex-router-auth/src/: lib.rs  live_quota.rs  oauth.rs  quota_client.rs  refresh_worker.rs  resolver.rs  router_credentials.rs
crates/codex-router-cli/: Cargo.toml
crates/codex-router-cli/src/: account.rs  credential_runtime.rs  doctor.rs  lib.rs  live.rs  main.rs  observability.rs  profile.rs  quota.rs  secret_store_factory.rs  sessions.rs  telemetry.rs  token.rs
crates/codex-router-cli/src/presentation/: mod.rs
crates/codex-router-cli/src/presentation/session_picker/: action.rs  component.rs  filters.rs  mod.rs  model.rs  model_tests.rs  render.rs  request.rs  test_support.rs
crates/codex-router-cli/tests/: cli_log_policy.rs
crates/codex-router-core/: Cargo.toml
crates/codex-router-core/src/: affinity.rs  audit.rs  config.rs  error.rs  ids.rs  lib.rs  local_auth.rs  redaction.rs  routes.rs
crates/codex-router-proxy/: Cargo.toml
crates/codex-router-proxy/src/: account_selection.rs  credential_runtime.rs  headers.rs  http_sse.rs  lib.rs  local_auth.rs  provider_error.rs  routes.rs  secret_store_factory.rs  server.rs  telemetry.rs  upstream.rs  websocket.rs
crates/codex-router-quota/: Cargo.toml
crates/codex-router-quota/src/: lib.rs  snapshot.rs  worker.rs
crates/codex-router-secret-store/: Cargo.toml
crates/codex-router-secret-store/src/: account_tokens.rs  affinity_secret.rs  backend.rs  file_backend.rs  lib.rs  model.rs  refresh_lease.rs
crates/codex-router-selection/: Cargo.toml
crates/codex-router-selection/src/: affinity.rs  burn_down.rs  eligibility.rs  lib.rs  precommit.rs  reservation.rs  run_rate.rs  turn_state.rs  weighted_deficit.rs
crates/codex-router-state/: Cargo.toml
crates/codex-router-state/src/: account.rs  affinity_owner.rs  lib.rs  quota_snapshot.rs  repositories.rs  selection_projection.rs  sqlite.rs
crates/codex-router-test-support/: Cargo.toml
crates/codex-router-test-support/src/: installed_codex.rs  lib.rs  mock_upstream.rs  route_native.rs  transcript.rs
crates/codex-router-test-support/src/route_native/: client.rs  fixture.rs  upstream.rs
docs/plans/: 2026-06-20-codex-router-implementation-plan.md  2026-06-22-codex-router-plan-1a-credential-state-substrate.md  2026-06-22-codex-router-plan-1b-quota-runtime-status-selection.md  2026-06-22-quota-runtime-status-oauth-readiness-plan.md  2026-06-26-quota-routing-plan-1-sqlx-strict-routing.md  2026-06-26-quota-routing-plan-2-codex-safe-exhaustion.md  2026-06-26-quota-routing-plan-3-observability-live-proof.md  2026-06-26-quota-routing-safety-plan.md  2026-06-28-account-selection-burn-rate-implementation-plan.md  2026-06-29-cli-dx-iocraft-implementation-plan.md
docs/plans/reviews/: 2026-06-20-codex-router-implementation-review.md  2026-06-20-codex-router-plan-review.md
docs/specs/: 2026-06-20-codex-router-greenfield-spec.md  2026-06-26-quota-routing-safety-spec.md  2026-06-27-account-quota-burn-rate-selection.md  2026-06-28-account-selection-tdd-scenario-spec.md  2026-06-29-cli-dx-iocraft-layout-spec.md
docs/specs/references/: 2026-06-20-research-evidence.md
docs/specs/reviews/: 2026-06-20-codex-router-spec-review.md
docs/testing/: live-oauth-quota.md
docs/wip/: implementation-provenance.md
scripts/: check-http-streaming-guard.py  check-release-runtime-guardrails.py  proof-matrix.sh
tests/smoke/: installed_codex_mock.sh  quota_routing_plan1_observability.sh  quota_routing_plan2_observability.sh  quota_routing_plan3_observability.sh  quota_routing_selection_matrix.sh  quota_status_fixture.sh
tmp/debug-workflows/2026-06-22-codex-router-pr-plan1a-quota-status-ux/: debug-investigation.md
tmp/debug-workflows/2026-06-24-codex-router-async-runtime-ws-first-frame/: debug-investigation.md
tmp/implementation-review-workflows/2026-06-25-account-router-law-review/: parent-findings-so-far.md  review-packet.md
tmp/implementation-review-workflows/2026-06-25-router-burndown-sessions/: review-packet.md  review-report.md
tmp/plan-workflows/2026-06-20-codex-router-main-implementation-execute/: implementation-execute-plan-brief.md
tmp/plan-workflows/2026-06-20-codex-router-main-implementation-review/: implementation-review-packet.md
tmp/plan-workflows/2026-06-21-codex-router-feature-initial-codex-router-quota-output-account-onboarding/: implementation-execute-plan-brief.md  implementation-review-packet.md  implementation-review-report.md  implementation-review-resolution.md
tmp/plan-workflows/2026-06-22-quota-runtime-status-oauth-readiness/: implementation-a1-fail-closed-credential-gate-receipt.md  implementation-execute-plan-brief.md  implementation-gate0-carry-forward-receipt.md  implementation-review-after-f75838c.md  implementation-review-fix-2-receipt.md  implementation-review-fix-receipt.md  implementation-t1-runtime-boundary-receipt.md  implementation-t2-identity-redaction-receipt.md  implementation-t3-fail-closed-credential-receipt.md  implementation-t4-unified-credential-resolver-receipt.md  implementation-t5-selector-input-receipt.md  plan-ledger.md  plan-restructure-ledger.md  plan-review-after-05bf755.md  plan-review-after-460b51e.md  plan-review-after-734554d.md  plan-review-after-8fb965f.md  plan-review-after-918db95.md  plan-review-after-e7b55fc.md  plan-review-after-revision.md  plan-review-post-restructure.md  plan-revision-ledger.md  post-review-synthesis.md  pr-wrapup-pr2-readiness.md
tmp/plan-workflows/2026-06-23-quota-burndown-routing/: implementation-execute-plan-brief.md  implementation-plan.md  plan-ledger.md
tmp/plan-workflows/2026-06-23-reset-aware-burndown-routing/: implementation-execute-plan-brief.md  implementation-plan.md  plan-ledger.md
tmp/plan-workflows/2026-06-24-async-router-runtime/: implementation-execute-plan-brief.md  implementation-plan.md  implementation-review-packet.md  plan-ledger.md
tmp/smoke/: installed-codex-three-websocket-65063-1782334327602.json
(+279 files in other folders)
