[workspace]
resolver = "3"
members = [
    "crates/codex-router-auth",
    "crates/codex-router-cli",
    "crates/codex-router-core",
    "crates/codex-router-proxy",
    "crates/codex-router-quota",
    "crates/codex-router-secret-store",
    "crates/codex-router-selection",
    "crates/codex-router-state",
    "crates/codex-router-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
codex-router-core = { path = "crates/codex-router-core", version = "0.1.0" }
codex-router-quota = { path = "crates/codex-router-quota", version = "0.1.0" }
base64 = "0.22.1"
bytes = "1.11.0"
comfy-table = "7.2.2"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
hmac = "0.12.1"
http = "1.4.0"
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = { version = "1.8.1", features = ["http1", "http2", "client", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "server", "http1", "http2", "tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.17", features = ["rt"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
manual_ok_or = "deny"
manual_unwrap_or = "deny"
needless_collect = "deny"
redundant_clone = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"
