[package]
name = "codex-router-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
codex-router-core.workspace = true
codex-router-secret-store = { path = "../codex-router-secret-store", version = "0.1.0" }
codex-router-state = { path = "../codex-router-state", version = "0.1.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
