[package]
name = "codex-router-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "codex-router"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
base64.workspace = true
codex-router-auth = { path = "../codex-router-auth", version = "0.1.0" }
codex-router-core.workspace = true
codex-router-proxy = { path = "../codex-router-proxy", version = "0.1.0" }
codex-router-secret-store = { path = "../codex-router-secret-store", version = "0.1.0" }
codex-router-state = { path = "../codex-router-state", version = "0.1.0" }
comfy-table.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tungstenite = "0.28.0"
