[package]
name = "codex-router-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hmac.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2.workspace = true
thiserror.workspace = true
toml = "1.1.2"
