[package]
name = "codex-router-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
codex-router-auth = { path = "../codex-router-auth", version = "0.1.0" }
codex-router-core.workspace = true
codex-router-quota.workspace = true
codex-router-secret-store = { path = "../codex-router-secret-store", version = "0.1.0" }
codex-router-selection = { path = "../codex-router-selection", version = "0.1.0" }
codex-router-state = { path = "../codex-router-state", version = "0.1.0" }
futures-util.workspace = true
http.workspace = true
httparse.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
