[package]
name = "codex-router-secret-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
codex-router-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
