[package]
name = "codex-router-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
codex-router-cli = { path = "../codex-router-cli", version = "0.1.0" }
codex-router-core.workspace = true
codex-router-proxy = { path = "../codex-router-proxy", version = "0.1.0" }
codex-router-secret-store = { path = "../codex-router-secret-store", version = "0.1.0" }
codex-router-state = { path = "../codex-router-state", version = "0.1.0", features = ["sync-rusqlite-fixtures"] }
serde_json.workspace = true
sha2.workspace = true
tungstenite = "0.28.0"
